--- a/BITLAB-war/web/template.xhtml
+++ b/BITLAB-war/web/template.xhtml
@@ -225,9 +225,9 @@
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">
+                                        <a href="alumnos.bitlab" class="nav-link">
                                             <i class="fas fa-circle nav-icon"></i>
-                                            <p>Level 1</p>
+                                            <p>Alumnos</p>
                                         </a>
                                     </li>
                                 </ui:fragment>
