--- a/BITLAB-war/web/registro.xhtml
+++ b/BITLAB-war/web/registro.xhtml
@@ -272,7 +272,7 @@
                                     </div>
                                     <div class="form-group">
                                         <p:outputLabel for="otrosEstudios" value="¡Queremos conocerte mejor! Detállanos los conocimientos técnicos previos que posees." />
-                                        <p:inputTextarea value="#{registroManaged.otrosConocimientos}" id="otrosEstudios" maxlength="600" styleClass="form-control" placeholder="!Cuéntanos sobre tus otros conocimientos técnicos acá!" required="true" requiredMessage="Por favor, indicanos tus otros conocimientos">
+                                        <p:inputTextarea value="#{registroManaged.otrosConocimientos}" id="otrosEstudios" maxlength="600" styleClass="form-control" placeholder="¡Cuéntanos sobre tus otros conocimientos técnicos acá!" required="true" requiredMessage="Por favor, indicanos tus otros conocimientos">
                                         </p:inputTextarea>
                                         <p:message for="otrosEstudios" />
                                     </div>
@@ -297,9 +297,9 @@
                                     <div class="form-group">
                                         <p:outputLabel for="salario" value="Finalmente, ¿cuál es tu expectativa salarial?" />
                                         <br/>
-                                        <p:spinner id="salario" min="300" max="5000" stepFactor="50" suffix=" $" styleClass="form-group" style="width: 100%">
+                                        <p:spinner id="salario" min="300" max="5000" stepFactor="50" suffix=" $" styleClass="form-group" style="width: 100%" value="#{registroManaged.aspiracionSalarial}">
                                         </p:spinner>
-                                        <p:slider for="salario" minValue="300" maxValue="2000" step="50" />
+                                        <p:slider for="salario" minValue="300" maxValue="5000" step="50" />
                                         <br/>
                                     </div>
 
