Completando Tabla Cursos
Completando Tabla Cursos

--- a/BITLAB-war/web/template.xhtml
+++ b/BITLAB-war/web/template.xhtml
@@ -194,6 +194,13 @@
                                             <p>Docentes</p>
                                         </a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a href="curso.bitlab" class="nav-link">
+                                            <i class="fas fa-circle nav-icon"></i>
+                                            <p>Cursos</p>
+                                        </a>
+                                    </li>
+                                    
                                     <li class="nav-item has-treeview">
                                         <a href="#" class="nav-link">
                                             <i class="nav-icon fas fa-circle"></i>
