Completando CRUD Usuarios
Completando CRUD Usuarios

--- a/BITLAB-war/web/template.xhtml
+++ b/BITLAB-war/web/template.xhtml
@@ -200,7 +200,12 @@
                                             <p>Cursos</p>
                                         </a>
                                     </li>
-                                    
+                                    <li class="nav-item">
+                                        <a href="usuario.bitlab" class="nav-link">
+                                            <i class="fas fa-circle nav-icon"></i>
+                                            <p>Usuarios</p>
+                                        </a>
+                                    </li>
                                     <li class="nav-item has-treeview">
                                         <a href="#" class="nav-link">
                                             <i class="nav-icon fas fa-circle"></i>
